--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -18,6 +19,8 @@ android {
         }
     }
 }
+
+def dbflow_version = "4.0.3"
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -29,4 +32,9 @@ dependencies {
     compile 'org.apache.commons:commons-io:1.3.2'
     compile 'com.android.support:design:26.+'
     testCompile 'junit:junit:4.12'
+    annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+    compile 'com.github.florent37:singledateandtimepicker:1.1.8'
 }
+
